--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "A fullstack project for practise purpose",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec ts-node index.ts"
   },
   "author": "Mannan Khan",
   "license": "ISC",
@@ -15,8 +15,12 @@
     "@types/node": "^22.5.1",
     "@types/sequelize": "^4.28.20",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
+    "sequelize": "^6.37.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
     "winston": "^3.14.2"
   }
 }
