added the registerUser, addProduct, getSingleProduct APIs in the backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,13 @@
   "author": "Mannan Khan",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.5.1",
     "@types/sequelize": "^4.28.20",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
