--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.5.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/sequelize": "^4.28.20",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
