--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/sequelize": "^4.28.20",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemailer": "^6.9.14",
